# flint-rs

./: Cargo.toml  Makefile  a.c  build.rs  gen.py
examples/: Makefile  sub.c
flint-rs/: Cargo.toml
flint-rs/benches/: interp.rs
flint-rs/examples/: bench-interp.rs
flint-rs/src/: integer.rs  lib.rs  mod_poly.rs
flint-sys/: Cargo.toml  README.md  build.rs  build_headers.rs  gen.py  gen_headers.py
flint-sys/C/: extern.c
flint-sys/flint-2.8.4-c/nmod_mat/test/: t-charpoly.c
flint-sys/flint-2.8.5-c/fmpq_poly/test/: t-add_sub_fmpq.c
flint-sys/flint-2.8.5-c/nmod_mpoly/test/: t-pow_ui.c
flint-sys/flint-3.1.2/: configure
flint-sys/flint-3.1.2/src/: config.h.in
flint-sys/flint-3.4.0/: configure
flint-sys/flint-3.4.0/src/: config.h.in
flint-sys/flint-3.5.0/: configure
flint-sys/flint-3.5.0/src/: config.h.in
flint-sys/flint-3.5.0/src/fmpz_poly/test/: t-mulmid_classical.c
flint-sys/flint-3.5.0/src/gr_poly/test/: t-mullow_bivariate_KS.c
flint-sys/flint-3.5.0/src/radix/profile/: p-mul.c
flint-sys/flint-3.5.0/src/radix/test/: t-inv_approx.c
flint-sys/flint-bindgen/: .gitignore  Cargo.toml  README.md  build.rs  gen_wrapper.py  wrapper.h
flint-sys/flint-bindgen/examples/: test.rs
flint-sys/flint-bindgen/scripts/: bindgen_headers.rs  build_headers.rs  extern.c  externs.py  gen_bindings.sh  headers.py
flint-sys/flint-bindgen/src/: lib.rs
flint-sys/src/: __mod_statements.rs  acb.rs  acb_calc.rs  acb_dft.rs  acb_dirichlet.rs  acb_elliptic.rs  acb_hypgeom.rs  acb_mat.rs  acb_modular.rs  acb_poly.rs  acb_theta.rs  acb_types.rs  acf.rs  acf_types.rs  aprcl.rs  arb.rs  arb_calc.rs  arb_fmpz_poly.rs  arb_fpwrap.rs  arb_hypgeom.rs  arb_mat.rs  arb_poly.rs  arb_types.rs  arf.rs  arf_types.rs  arith.rs  bernoulli.rs  bindgen.rs  bindings.rs  bool_mat.rs  ca.rs  ca_ext.rs  ca_field.rs  ca_mat.rs  ca_poly.rs  ca_types.rs  ca_vec.rs  calcium.rs  d_mat.rs  d_vec.rs  (+134 more)
rug-fft/: .gitignore  Cargo.toml  README.md  run-tests.zsh  view.R
rug-fft/benches/: fft.rs
rug-fft/examples/: bench-fft.rs
rug-fft/src/: lib.rs
rug-polynomial/: Cargo.toml  README.md
rug-polynomial/examples/: bench-interp.rs
rug-polynomial/src/: flint_rug_bridge.rs  lib.rs
