[package]
name = "flint-sys"
version = "0.6.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"
description = "Bindings to the FLINT C library"
homepage = "https://github.com/alex-ozdemir/flint-rs/tree/master/flint-sys"
repository = "https://github.com/alex-ozdemir/flint-rs"
documentation = "https://docs.rs/flint-sys"
license = "MIT OR Apache-2.0"
keywords = ["polynomials", "number-theory", "math"]
categories = ["cryptography", "algorithms", "external-ffi-bindings"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
gmp-mpfr-sys = { version = "1.4", optional = true }

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"

[features]
default = ["no-system-libs"]
disable-make-check = []
no-system-libs = ["gmp-mpfr-sys"]
use-system-libs = []
cnodelete = []

[target.'cfg(target_os = "windows")'.build-dependencies.winapi]
version = "0.3"
features = ["combaseapi", "knownfolders", "shlobj", "winbase", "winerror"]
