[package]
name = "rug-fft"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.11.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
