[package]
name = "rug-fft"
version = "0.1.2"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"
description = "FFT implementations for rug integers"
homepage = "https://github.com/alex-ozdemir/flint-rs/tree/master/rug-fft"
repository = "https://github.com/alex-ozdemir/flint-rs"
documentation = "https://docs.rs/rug-fft"
license = "MIT OR Apache-2.0"
keywords = ["signal-processing", "polynomials", "number-theory", "math"]
categories = ["cryptography", "algorithms"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.11.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
