[package]
name = "rug-polynomial"
version = "0.1.3"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"
description = "Polynomial arithmetic, built on Rug & FLINT"
homepage = "https://github.com/alex-ozdemir/flint-rs/rug-polynomial"
repository = "https://github.com/alex-ozdemir/flint-rs"
documentation = "https://docs.rs/rug-polynomial"
license = "MIT OR Apache-2.0"
keywords = ["polynomials", "number-theory", "math"]
categories = ["cryptography", "algorithms"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flint-sys = "0.1.0"
rug-fft = "0.1.0"
gmp-mpfr-sys = "1.3.1"
rug = { version = "1.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
