[package]
name = "rug-polynomial"
version = "0.2.4"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"
description = "Polynomial arithmetic, built on Rug & FLINT"
homepage = "https://github.com/alex-ozdemir/flint-rs/tree/master/rug-polynomial"
repository = "https://github.com/alex-ozdemir/flint-rs"
documentation = "https://docs.rs/rug-polynomial"
license = "MIT OR Apache-2.0"
keywords = ["polynomials", "number-theory", "math"]
categories = ["cryptography", "algorithms"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flint-sys = "0.5.0"
#flint-sys = { path = "../flint-sys" }
rug-fft = "0.1.0"
gmp-mpfr-sys = "~1.4"
rug = { version = "1.13", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
quickcheck_macros = "0.9.0"
quickcheck = "0.9.0"
